--- a/Summary.tex
+++ b/Summary.tex
@@ -8,8 +8,12 @@
 
 % Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
 
+\subsection{MoB-ELM}
+
 % ----- added From SPIE SD
 \label{sec:conc}  % \label{} allows reference to this section
+
+
 \subsection{Spectral-Matching and LUT retrieval}
 % copied from RS of Env. paper
 The retrieval results shown in this study are promising for the use of Landsat 8 for monitoring of coastal and inland waters. The retrieval process was applied to two Landsat 8 scenes over the same study area and compared with field measurements. Maps of CPA concentrations show the expected trends of low concentration in the lake and higher concentration in the ponds. The retrieval was validated with ground-truth data taken at the same time as the satellite overpass, as opposed to comparison with historical field measurements. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs.
