Added Images for 14 and 15

--- a/Results.tex
+++ b/Results.tex
@@ -31,6 +31,41 @@ An example of a Landsat 8 image that includes the area of study is illustrated i
   % \vspace{1cm}
 \end{figure}
 
+
+\begin{figure}[htb]
+    \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_ENVI.jpg}
+      \centerline{(a)}\medskip
+    \end{minipage}
+    \hfill
+    \begin{minipage}[d]{0.48\linewidth}
+      \centering
+      \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_ENVI.jpg}
+      \centerline{(b)}\medskip
+    \end{minipage} 
+
+      \caption{Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:L8Images1415} }
+\end{figure}  
+
+\begin{figure}[htb!]
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_AreaOfStudy.png}
+       \put (95,45) {\Large (a)}
+      \end{overpic} 
+    \end{minipage}
+    \begin{minipage}[d]{1.0\linewidth}
+      \centering
+      \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_AreaOfStudy.png}
+        \put (95,45) {\Large (b)}
+      \end{overpic}
+    \end{minipage} 
+      \caption{Area of study from the Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
+\end{figure}  
+
+
+
 Water samples are collected for each site in dark Nalgene bottles. Additionally, remote-sensing reflectances $R_{rs}$ are measured using an ASD and a SVC instrument (one for each crew). Backscattering measurements are taken using a HydroScat-2. This measurement is taken by both crew only if the logistic of the particular day allows it. Otherwise priority is given to the Lake crew. For each site, a location is recorded using a GPS. \autoref{tab:collect} shows a summary of the data collections done in 2013, 2014 and 2015 seasons with the respective available data.
 
 \begin{table}[htb]
