--- a/Results.tex
+++ b/Results.tex
@@ -77,19 +77,19 @@ After collection, these water samples were analyzed in the lab at the Rochester 
 \begin{figure}[htb]
     \begin{minipage}[c]{0.48\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastLONGSJavier.eps}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastLONGSJavier-eps-converted-to.pdf}
      \centerline{(a)}\medskip
     \end{minipage}
     \hfill
     \begin{minipage}[d]{0.48\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_CDOM_LONGS091913.eps}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_CDOM_LONGS091913-eps-converted-to.pdf}
      \centerline{(b)}\medskip
     \end{minipage}\\
     
     \begin{minipage}[d]{1.0\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_SM_LONGS091913.eps}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_SM_LONGS091913-eps-converted-to.pdf}
       \centerline{(c)}\medskip
     \end{minipage}
   \caption{Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection. These measured IOPs were used to create the LUT in HydroLight. \label{fig:IOPastLONGS} }  
@@ -101,13 +101,7 @@ After collection, these water samples were analyzed in the lab at the Rochester 
 \section{Atmospheric Correction}
 \subsection{MoB-ELM}
 
-The MoB-ELM atmospheric correction algorithm discussed above was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (latitude: $43^\circ15'32.5''$N and longitude: $77^\circ36'13.1''$W) shown in \autoref{fig:L8Image130919}. The radiance and reflectance spectra of the bright and dark pixels used for the MoB-ELM algorithm for the Landsat 8 scene acquired on 09-19-2013 used in this work are shown in \autoref{fig:MOBELMpxls}. \todo{connect with Methodology figure}. 
-
-\begin{figure}[htbp!]
-  \centering
-  \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/ROI130919_150422}
-  \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
-\end{figure}
+The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction algorithm discussed above was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (\autoref{fig:L8Image130919}). The radiance and reflectance spectra of the bright and dark pixels used for the MoB-ELM algorithm for the Landsat 8 scene acquired on 09-19-2013 used in this work are shown in \autoref{fig:MOBELMpxls}. 
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
@@ -126,7 +120,13 @@ The MoB-ELM atmospheric correction algorithm discussed above was applied to the 
   \caption{Example of the bright and dark pixel used in the MoB-ELM atmospheric correction method for Landsat 8 scene acquired on 09-19-2013. The radiance spectra are obtained from pseudo invariant features for the bright pixel and from a region in the lake with low level of concentrations. The remote-sensing reflectance ($R_{rs}$) spectra for the bright pixels are obtained from the Provisional Landsat 8 Surface Reflectance product from USGS over a bright object in the scene. The $R_{rs}$ spectra of the dark pixel are obtained from the Hydrolight simulating a region in the lake with low level of concentrations.\label{fig:MOBELMpxls} } 
 \end{figure}
 
-As an example of the MoB-ELM results, \autoref{fig:RrsROIs130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene (\autoref{fig:091913Sites}). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
+\begin{figure}[htbp!]
+  \centering
+  \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/ROI130919_150422}
+  \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+\end{figure}
+
+As an example of the MoB-ELM results, \autoref{fig:RrsROIs130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene (\autoref{fig:0910913Sites}). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
 
 
 Preliminary results of the model-based ELM atmospheric correction methods for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in reflectance values after applying the model-based ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. \autoref{fig:refcomp} shows water reflectance spectra as preliminary results from the model-based ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). 
@@ -138,7 +138,7 @@ As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm pr
 
 \begin{figure}[htb]
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixels_2.eps}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixels_2-eps-converted-to.pdf}
       \caption{Water pixel spectra after applying the model-based ELM atmospheric correction method.}
       \label{fig:waterpxs}
 \end{figure}
@@ -146,7 +146,7 @@ As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm pr
 
 \begin{figure}[htb]
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixelComparisonELMELMbased}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixelComparisonELMELMbased-eps-converted-to.pdf}
       \caption{Comparison between traditional ELM (dashed lines) and model-based ELM (solid lines).}
       \label{fig:refcomp}
 \end{figure}
@@ -436,49 +436,49 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large A) $443nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-SWIR.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-SWIR.png}
       % \put (65,17) {\large C) $561nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large C) $561nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[d]{1.0\linewidth}
     \centering
-      \begin{overpic}[trim=70 0 0 1470,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=30 0 0 340,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -490,49 +490,49 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large A) $443nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-SWIR.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-SWIR.png}
       % \put (65,17) {\large C) $483nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large C) $483nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[d]{1.0\linewidth}
     \centering
-      \begin{overpic}[trim=70 0 0 1470,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=30 0 0 340,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -544,49 +544,49 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large A) $443nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-SWIR.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-SWIR.png}
       % \put (65,17) {\large C) $561nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large C) $561nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[d]{1.0\linewidth}
     \centering
-      \begin{overpic}[trim=70 0 0 1470,clip,width=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=30 0 0 340,clip,width=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -598,49 +598,49 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large A) $443nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-SWIR.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-SWIR.png}
       % \put (65,17) {\large C) $655nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_SeaDAS-MUMM.png}
       % \put (65,17) {\large C) $655nm$}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[d]{1.0\linewidth}
     \centering
-      \begin{overpic}[trim=70 0 0 1470,clip,width=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=30 0 0 340,clip,width=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -888,7 +888,7 @@ The results of the retrieval for the 09-19-2013 scene is illustrated in the left
 
 % Note that the image to be analyzed needs to only include a bright target and not necessary a big urban area in order to determine the bright pixel from the Landsat surface reflectance product.\\
 
-A second image acquired on 09-29-2014 (scene LC80170302014272LGN00) (\autoref{fig:092914Sites}) was analyzed in a similar fashion except that the reflectance of the bright pixel target was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond). This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on both days, along with a regression line fitted to the data and its respective goodness of fit values. The $R^2$ value of the regression for all CPAs are high. Note that dark targets on both days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
+A second image acquired on 09-29-2014 (scene LC80170302014272LGN00) (\autoref{fig:ROI_L8Images1415}.(a)) was analyzed in a similar fashion except that the reflectance of the bright pixel target was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond). This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on both days, along with a regression line fitted to the data and its respective goodness of fit values. The $R^2$ value of the regression for all CPAs are high. Note that dark targets on both days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
 
 The numerical results are summarized in \autoref{fig:RMSE} where the root mean squared error (RMSE) in predicted concentration is normalized by the range in concentrations to estimate overall performance, i.e. the normalized RMSE (NRMSE), defined as
 
@@ -951,7 +951,7 @@ The second chlorophyll-{\it a} retrieval algorithm was the standard NASA algorit
 \todo{Connect with previous paragraph} Preliminary results for concentration maps for each CPA over the Rochester Embayment, Rochester, NY are shown in Figure~\ref{fig:retrievalresults}. The expected trend of having low concentration of CPAs in the offshore of Lake Ontario and higher concentrations in the nearby ponds (Long Pond and Cranberry Pond) can be seen. 
 \begin{figure}[htb]
 \centering
-\includegraphics[trim=200 100 180 0,clip,height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2014_RITResearchSymposium/Images/RetrievalResults.eps}
+\includegraphics[trim=200 100 180 0,clip,height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2014_RITResearchSymposium/Images/RetrievalResults-eps-converted-to.pdf}
    \caption{Retrieval preliminary results.}
       \label{fig:retrievalresults}   
 \end{figure}
@@ -959,21 +959,21 @@ The second chlorophyll-{\it a} retrieval algorithm was the standard NASA algorit
 Comparisons between retrieved CPAs concentrations and field measurements are shown in Figure~\ref{fig:chlcomp}, Figure~\ref{fig:tsscomp} and Figure~\ref{fig:cdomcomp} for four different stations in the area of study. This comparison with field measurements showed good agreement at low concentrations but differences at higher concentrations. Ongoing work is focusing on incorporation of the IOP differences between water bodies in the LUT optimization process.
 \begin{figure}[htb]
 \centering
-    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/chlcomp.eps} 
+    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/chlcomp-eps-converted-to.pdf} 
     \caption{Comparison between measured and retrieved chlorophyll {\it a} concentration.}
     \label{fig:chlcomp} 
 \end{figure}     
 
 \begin{figure}[htb]
 \centering
-    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/tsscomp.eps}   
+    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/tsscomp-eps-converted-to.pdf}   
     \caption{Comparison between measured and retrieved TSS concentration.}
     \label{fig:tsscomp} 
 \end{figure}  
 
 \begin{figure}[htb]
 \centering
-    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/cdomcomp.eps}    
+    \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/IGARSS2014/paper/Images/cdomcomp-eps-converted-to.pdf}    
     \caption{Comparison between measured and retrieved CDOM concentration.}
     \label{fig:cdomcomp} 
 \end{figure}  
