Finished Rrs comparison in the Results chapter...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -67,3 +67,5 @@
 \newacronym{nrmse}{NRMSE}{normalized root mean squared error}
 
 \newacronym{mumm}{MUMM}{Management Unit of the North Sea Mathematical Models}
+
+\newacronym{rma}{RMA}{Reduced Major Axis}
