--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -207,6 +207,9 @@
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
 \includeonly{Acronyms,Introduction,Results}
 
+% Added 10-21-15 ----------------------------------------
+\usepackage{pdflscape}
+
 %******************************************************************************************************
 %******************************************************************************************************
 %******************************************************************************************************
