--- a/Results.tex
+++ b/Results.tex
@@ -82,7 +82,7 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
 
 % ------------------------------
 \section{Laboratory Measurements}
-After collection, these water samples were analyzed in the lab at the Rochester Institute of Technology (RIT), and concentration and IOPs for each CPA were measured following the procedures described by \cite{Mueller1995} (see Appendix~\ref{ch:labmea} for more details about lab measurements). These measurements are utilized as input to Ecolight for the LUT generation of the retrieval process and the black pixel determination for the MoB-ELM atmospheric correction algorithm. Also, some are utilized for validation of the retrieval process. The $C_a$ and $TSS$ measurements were validated by comparing with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison between labs showed agreement in the measurements. \autoref{tab:collect} shows the measurements available. Examples of IOPs measured in lab from the 09-19-13 collection for chlorophyll, CDOM and minerals are shown in \autoref{fig:IOPastLONGS}.
+After collection, these water samples were analyzed in the lab at the Rochester Institute of Technology (RIT), and concentration and IOPs for each CPA were measured following the procedures described by \cite{Mueller1995} (see Appendix~\ref{ch:labmea} for more details about lab measurements). These measurements are utilized as input to Ecolight for the \gls{lut} generation of the retrieval process and the black pixel determination for the MoB-ELM atmospheric correction algorithm. Also, some are utilized for validation of the retrieval process. The $C_a$ and $TSS$ measurements were validated by comparing with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison between labs showed agreement in the measurements. \autoref{tab:collect} shows the measurements available. Examples of IOPs measured in lab from the 09-19-13 collection for chlorophyll, CDOM and minerals are shown in \autoref{fig:IOPastLONGS}.
 
 \begin{figure}[htb]
     \begin{minipage}[c]{0.48\linewidth}
@@ -180,7 +180,7 @@ The fourth method evaluated in this work was the atmospheric correction approach
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{$R_{rs}$ Comparison Results}
 
-The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in the previous section are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image (\autoref{fig:0910913Sites})). A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443_482}--\ref{fig:Rrs561_655} show the $R_{rs}$ for band 1--4 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
+The $R_{rs}$ products from the four atmospheric correction methods described in the previous section (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image (\autoref{fig:0910913Sites}). A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band (\S\ref{sec:prepro}). \autoref{fig:Rrs443_482} shows the $R_{rs}$ values for $443nm$ (a-d) and $482nm$ (e-h), and \autoref{fig:Rrs561_655} for $561nm$ (a-d) and $655nm$ (e-h) for these four atmospheric correction methods. When analyzed visually, the similarities among the methods are higher in band 3 and 4 than band 1 and 2. For all bands, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in across all bands. This is caused due to the low SNR in SWIR bands and averaging used for applying the \cite{Gordon:1994} atmospheric correction in \gls{seadas}.  Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen or incorporating bottom effects in the \gls{lut}.
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb!]
@@ -267,7 +267,7 @@ The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and S
       \end{overpic}
     \end{minipage}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ and $482nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443_482} } 
+  \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ (a-d) and $482nm$ (e-h) from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443_482} } 
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb!]
@@ -353,13 +353,12 @@ The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and S
       \end{overpic}
     \end{minipage}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ and $655nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs561_655} } 
+  \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ (a-d) and $655nm$ (e-h) from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs561_655} } 
 \end{figure}
 
-Another comparison of $R_{rs}$ at $443nm$, $483$, $561nm$ and $655nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs655} as scatter plots with a regression line in red solid lines. Again, all the methods show more similarities in band 3 than band 1, which is corroborated by the smaller offset values for band 3 than band 1, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 than band 1 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the root mean squared error (RMSE) between the methods compared. 
+Another comparison of $R_{rs}$ at $443nm$, $483nm$, $561nm$ and $655nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs655} as scatter plots with a \gls{rma} regression line in red solid lines. The colors indicates pixel density. Again, all the methods show more similarities in band 3 and 4 than band 1 and 2, which is corroborated by the smaller \gls{rmse} for band 3 and 4 than band 1 and 2, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 and 4 than band 1 and 2 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the \gls{rmse} between the methods compared. 
 
-
-
+\begin{landscape}
 % Method 1    Method 2    wl    NegTool1  NegTool2    usable  rsq_SS      rsq_corr    slope   offset      R^2         N           RMSE
 % Acolite     MoB-ELM     443   0.53      0.09        97      .0.8791     0.8828      0.9444  -0.0047     0.8791      144047     0.0054
 % Acolite     SeaDAS      443   0.53      76.74       98      .0.7804     0.7924      1.1437  -0.0053     0.7804      145186     0.0038
@@ -385,13 +384,12 @@ Another comparison of $R_{rs}$ at $443nm$, $483$, $561nm$ and $655nm$ among all 
 % SeaDAS      MoB-ELM     655   43.68     0.00        55      .0.7708     0.7840      1.2158  -0.0004     0.7708      142375     0.0007
 % SeaDAS      MUMM        655   43.68     42.49       56      .0.7964     0.8067      1.0063  +0.0004     0.7964      146144     0.0007
 % MUMM        MoB-ELM     655   42.49     0.00        56      .0.6841     0.7091      1.2403  -0.0008     0.6841      145340     0.0009   
- 
+
 \begin{table}[htb!]
 \vspace{.3cm}
 \caption{ Comparison of the different atmospheric correction methods for retrieving $R_{rs}$ with the slope and offset for the regression lines and their respective goodness of fit values. \label{tab:RrsCompMethod} } 
 \centering
 \vspace{.2cm}
-\tiny
 \begin{tabular}{cllcccccccc} 
  % \bfseries{Band n} & \bfseries{$m$}      & \bfseries{$y_0$}    & \bfseries{$R^2$}     & \bfseries{$RMSE$} & $y(x=45^\circ)$   \\ \hline \hline
 Band    &   Method 1      &  Method 2   & Slope   & Offset  & $R^2 $  & N       & RMSE    &\multicolumn{2}{c}{$R_{rs}<0~[\%]$}   &   Used    \\ 
@@ -402,7 +400,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
       &   Acolite-SWIR  &  SeaDAS-SWIR  & 1.1437  & -0.0053 & 0.7804  & 145186  & 0.0038  &  ~0.53      & 76.74            &   98      \\
       &   Acolite-SWIR  &  SeaDAS-MUMM  & 1.0600  & -0.0032 & 0.8554  & 147730  & 0.0026  &  ~0.53      & 74.41            &   99      \\
       &   SeaDAS-SWIR   &  SeaDAS-MUMM  & 0.9175  & ~0.0018 & 0.8456  & 145315  & 0.0014  &  43.98      & 42.64            &   56      \\  \hline
-\multirow{6}{*}{448}&Acolite-SWIR&MoB-ELM     & 0.9353  & -0.0030 & \underline{0.9302}  & 144077  & 0.0037  &  ~0.51      & ~0.00            &   97      \\
+\multirow{6}{*}{483}&Acolite-SWIR&MoB-ELM     & 0.9353  & -0.0030 & \underline{0.9302}  & 144077  & 0.0037  &  ~0.51      & ~0.00            &   97      \\
       &   SeaDAS-SWIR   &  MoB-ELM      & 0.8547  & ~0.0002 & 0.8454  & 142116  & 0.0014  &  43.76      & ~0.00            &   55      \\
       &   SeaDAS-MUMM   &  MoB-ELM      & 0.8639  & -0.0007 & 0.8408  & 145138  & 0.0022  &  42.57      & ~0.00            &   56      \\ 
       &   Acolite-SWIR  &  SeaDAS-SWIR  & 1.1269  & -0.0041 & 0.8739  & 145692  & 0.0028  &  ~0.51      & 76.36            &   98      \\
@@ -422,20 +420,18 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
       &   SeaDAS-SWIR   &  SeaDAS-MUMM  & 1.0063  & ~0.0004 & 0.7964  & 146144  & 0.0007  &  43.68      & 42.49            &   56      \\
  \end{tabular}
 \end{table}
+\end{landscape}
 
-All methods produced negative $R_{rs}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as Used $[\%]$). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. 
+All methods produced negative $R_{rs}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as ``Used $[\%]$''). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. However, these negative values are small. 
 
-\autoref{fig:13262RrsCompField} shows a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. We calculated the normalized root mean squared error (NRMSE) for $R_{rs}(\lambda)$ to evaluate the differences between field measurements and spectra retrieved from the atmospheric correction methods. The NRMSE is defined as
+\autoref{fig:13262RrsCompField1} and \autoref{fig:13262RrsCompField2} show a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area (labels for \autoref{fig:13262RrsCompField1}.(a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier; labels for \autoref{fig:13262RrsCompField2}.(a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side). Note that {\it in situ} data were not available for all stations. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. The \gls{mobelm} algorithm performs the best over all. The Acolite-SWIR algorithm is the one that differs the most, specially in band 1 and 2. 
 
+We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate the differences between the {\it in situ} measurements and the spectra retrieved from the atmospheric correction methods. The \gls{nrmse} for the $R_{rs}$ is defined as
 \begin{equation}
 \label{eq:NRMSE}
   NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[R_{rs}(\lambda)_{ret}(n) - R_{rs}(\lambda)_{mea}(n)\right]^2}}}{max\{R_{rs}(\lambda)_{mea}(n)\} - min\{R_{rs}(\lambda)_{mea}(n)\}}\times100 ~[\%]
 \end{equation}
-
-\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM perform the best for all bands, followed by SeaDAS-SWIR. 
-% The biggest errors are obtained when applying the Acolite-SWIR method, specially in band 1.
-
-
+\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. For this case, $N=5$ {\it in situ} measurements. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM algorithm performs the best for all bands, followed by the SeaDAS-SWIR algorithm. The largest errors are obtained when applying the Acolite-SWIR algorithm, specially in band 1, followed by the SeaDAS-MUMM algorithm.
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[H]
@@ -663,82 +659,93 @@ All methods produced negative $R_{rs}$ values. These negative values indicates t
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[H]
+\vspace{0.7cm}
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTNS.png}
-      \put (20,60) {A) ONTNS} 
+      \put (20,60) {(a) ONTNS} 
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTOS.png}
-      \put (20,14) {B) ONTOS}     
+      \put (20,14) {(b) ONTOS}     
       \end{overpic}
   \end{minipage}
+
+  \vspace{0.7cm}
   
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTEX.png}
-      \put (20,14) {C) ONTEX}   
+      \put (20,14) {(c) ONTEX}   
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompRVRPL.png}
-      \put (20,14) {D) RVRPLM}      
+      \put (20,14) {(d) RVRPLM}      
       \end{overpic}  
   \end{minipage}
+
+  \vspace{0.7cm}
 
   \begin{minipage}[c]{1.0\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompRVRPI.png}
-      \put (20,14) {E) RVRPIER}     
+      \put (20,14) {(e) RVRPIER}     
       \end{overpic}  
   \end{minipage}
-  \caption{Comparison of $R_{rs}$ spectra with {\it in situ} data for the sites on the 09-19-2013 collection. \label{fig:13262RrsCompField}} 
+  \vspace{0.7cm}
+  \caption{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField1}} 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[H]
+\vspace{0.7cm}
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGN.png}
-      \put (20,60) {A) LONGN}   
+      \put (20,60) {(a) LONGN}   
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGS.png}
-      \put (20,60) {B) LONGS}
+      \put (20,60) {(b) LONGS}
       \end{overpic}
   \end{minipage}
+
+  \vspace{0.7cm}
   
    \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompCRANB.png}
-      \put (45,14) {C) CRANB}     
+      \put (45,14) {(c) CRANB}     
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompBRADI.png}
-      \put (45,14) {D) BRADIN}
+      \put (45,14) {(d) BRADIN}
       \end{overpic}
   \end{minipage}
+
+  \vspace{0.7cm}
   
   \begin{minipage}[d]{1.0\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompBRADO.png}
-      \put (45,14) {E) BRADONT}
+      \put (45,14) {(e) BRADONT}
       \end{overpic}
   \end{minipage}    
 
-% 
-  \caption{Comparison of $R_{rs}$ spectra. \label{fig:13262RrsComp}} 
+    \vspace{0.7cm}
+  \caption{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField2}} 
 \end{figure}
 
 
@@ -748,28 +755,28 @@ All methods produced negative $R_{rs}$ values. These negative values indicates t
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=30 0 50 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B1.png}
-      \put (20,40) {A) 443nm} 
+      \put (20,40) {(a) 443nm} 
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=110 0 180 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B2.png}
-      \put (20,40) {B) 483nm}     
+      \put (20,40) {(b) 483nm}     
       \end{overpic}
   \end{minipage}
 
     \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=110 0 180 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B3.png}
-      \put (20,40) {A) 561nm} 
+      \put (20,40) {(c) 561nm} 
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=110 0 180 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B4.png}
-      \put (20,40) {B) 655nm}     
+      \put (20,40) {(d) 655nm}     
       \end{overpic}
   \end{minipage}
 
@@ -784,7 +791,7 @@ All methods produced negative $R_{rs}$ values. These negative values indicates t
 % ------------ added from SPIE SD
 \subsection{Spectral-Matching and LUT Approach}
 \label{subsec:LUTapproach}
-The first chlorophyll-{\it a} retrieval algorithm used in this study was the algorithm developed by \cite{Concha2013IGARSS}. This algorithm uses a spectrum-matching and look-up-table (LUT) methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Hydrolight \cite{MobleyHE} with IOPs and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection.
+The first chlorophyll-{\it a} retrieval algorithm used in this study was the algorithm developed by \cite{Concha2013IGARSS}. This algorithm uses a spectrum-matching and \gls{lut} methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Hydrolight \cite{MobleyHE} with IOPs and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection.
 
 \begin{table}[htb]
 \caption{Input parameters for the LUT generation in Hydrolight for the Landsat 8 image acquired on 09-19-2013. These parameters are inherent optical properties (IOPs) for the lake (ONTNS) and the ponds (LONGS), chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$). \label{tab:LUTconc}} 
