Fixed dedication and Acronyms in table of contents to show up once

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[]{book}
+\documentclass[draft]{book}
 
 \usepackage{graphicx}
 
@@ -204,8 +204,8 @@
 \include{Acronyms} % to include Acronyms.tex
 
 % Added 11-15-13 ----------------------------------------
-% \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
-\includeonly{Acronyms,Introduction,Results}
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
+% \includeonly{Acronyms,Introduction,Results}
 
 % Added 10-21-15 ----------------------------------------
 \usepackage{pdflscape}
@@ -337,9 +337,11 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 \begin{dedication}
 % \addcontentsline{toc}{chapter}{Dedication}
 
-Dedicated to
+\centering
+Dedicated to (Dedicado a):\\
+\vspace{7cm}
+Mis amados viejitos,\\ Osvaldo Concha Silva\\ and (y) \\ Nelly del Carmen Sep\'ulveda Reyes...
 
-Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes...
 \end{dedication}
 
 \tableofcontents
@@ -353,7 +355,7 @@ Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes
 
 % \glsaddall
 \printglossaries
-\addcontentsline{toc}{chapter}{Acronyms and Abbreviations}
+% \addcontentsline{toc}{chapter}{Acronyms and Abbreviations}
 
 
 % \input{Introduction.tex}
